--- a/src/web/index-dev.html
+++ b/src/web/index-dev.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React单面应用</title>
+  <title>Document</title>
 </head>
 <body>
   <div id="app"></div>
+  <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 </body>
 </html>
